k8s/department-defination.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department-app
  labels:
    app: department-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: department-app
  template:
    metadata:
      labels:
        app: department-app
    spec:
      containers:
        - name: department-app
          image: amirdoc/department-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9002
