k8s/gateway-defination.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
  labels:
    app: gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway-app
          image: amirdoc/gateway-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
