k8s/registry-defination.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
spec:
  selector:
    matchLabels:
      app: eureka
  serviceName: eureka
  replicas: 2
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: amirdoc/registry-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
