k8s/default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 8080
