k8s/department-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: department-service
  labels:
    app: department-service
spec:
  selector:
    app: department-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9002
