k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  selector:
    app: gateway-app
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9999
      protocol: TCP
