k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-gress
  labels:
    name: app-ingress
spec:
  rules:
    - host: pantowa.com
      http:
        paths:
          - pathType: Prefix
            path: "/user"
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/department"
            backend:
              service:
                name: department-service
                port:
                  number: 80
